feat: find all products

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=jacal-services
 spring.datasource.url=${IDS_DATASOURCE_URL}
 spring.datasource.username=${IDS_MYSQL_USERNAME}
 spring.datasource.password=${IDS_MYSQL_PASSWORD}
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
