feat: utente per cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=${IDS_MYSQL_USERNAME}
 spring.datasource.password=${IDS_MYSQL_PASSWORD}
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+#security.ignored=/**
+#security.basic.enable=false
